--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,10 @@
         android:appComponentFactory="androidx.core.app.CoreComponentFactory"
         tools:targetApi="31">
         <activity
+            android:name=".EditActivity"
+            android:exported="true">
+        </activity>
+        <activity
             android:name=".MainActivity"
             android:exported="true">
         </activity>
